# crewai

./: README.md
ai_agents_teams/: README.md  crew.py
ai_agents_teams/db/: chroma.sqlite3
crew-agent-startup/: README.txt  pyproject.toml  requirements.txt  startup.py  startup2.py
crew-agent-startup/project2/: tools.py
crew-agent-startup/project3/: custom_tool.py
crew-youtube/: README.md  agents.py  main.py  pyproject.toml  tasks.py
crew-youtube/tools/: youtube_video_detail_tool.py  youtube_video_search_tool.py
trip_planner_from_scratch/: README.md  agents.py  main.py  pyproject.toml
trip_planner_from_scratch/travel_tools/: calculator_tool.py  search_tool.py
